--- a/q/275331.html
+++ b/q/275331.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>485</td><td>JavaScript ES7</td><td>240903T214854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275335#275335">Arnauld</a></td></tr>
-<tr d-ix="1"><td>nan</td><td>C clang</td><td>240904T131556Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275349#275349">jdt</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>C clang</td><td>240904T131556Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275349#275349">jdt</a></td></tr>
+<tr d-ix="1"><td>485</td><td>JavaScript ES7</td><td>240903T214854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275335#275335">Arnauld</a></td></tr>
 <tr d-ix="2"><td>nan</td><td>05AB1E</td><td>240904T115701Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275347#275347">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>160</td><td>Charcoal</td><td>240904T104850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275345#275345">Neil</a></td></tr>
 <tr d-ix="4"><td>503</td><td>JavaScript Node.js</td><td>240904T062626Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275342#275342">l4m2</a></td></tr>
@@ -35,20 +35,20 @@
 <tr d-ix="6"><td>610</td><td>Google Sheets</td><td>240903T222006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275336#275336">doubleun</a></td></tr>
 <tr d-ix="7"><td>156</td><td>Vyxal</td><td>240903T214715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275334#275334">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES7), Score: <s> 492 </s> 485</h1>
+<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, Score 678 (314 bytes)</h1>
+
+<pre class="lang-c prettyprint-override"><code>*a[]={&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;[&gt;]+&lt;[+&lt;]&quot;,0,&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;]&lt;[+&lt;]&quot;,0,&quot;&gt;[&gt;]+&lt;[+&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,0,&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&quot;};f(*s){for(;*s;)printf(a[*s++%13]);}
+</code></pre>
+<p><a href="https://tio.run/##7VLLboMwELzzFStXkYwNEVEvUU3oD/QPXB94JkgUIuwoB8Svly7mEXKreu5ajOTdmWEMTv20iuvzMLBYqlNHoqV4OBeXEVehDNU6kutMRoqHuFXEC7xfadWGvqo3zmqRhgQZ3vPajn6V89lNPK/NaEPbnoP0oqBMu13RtFQwLdxrW9amoLFkmvPd4VW5oh9eyjqtblkOoTZZ2ewvkeMgDb7isqYudA5g6bRpc@oKu8EpA5NrIxWcoIMPwomH6FsMLUYWPYt7i9KisshHagD95If5gI6m6IqGo7MAho/hfAlgeZSZOcJY15vRlJC50zv9lHuOOuvSS9xCXFXNPc9sXCKVt@e@CCMiHozkVshjEKipdc7RGVuP806uKA82kUclgwS7yMXEiYAEE68BJw0/gTZtemnpHMNDpgvvcIA3OE52848hy1t22WeNX8huMUT/f7//fL@/06KKz3rw7z8" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
+<p>Port of @Arnauld's answer. Everything I tried just just made the score worse.</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES7), Score: <s> 492 </s> 485</h1>
 <p>The scoring scheme makes most compression attempts counter-productive. So what we really want to do is just use as few expensive characters as possible... ¯\_(ツ)_/¯</p>
 <p>Expects an array of ASCII codes.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;a.map(c=&gt;[[&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&quot;][8&gt;&gt;c**7]]+`[+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;[&gt;]+&lt;[+&lt;]--]&lt;[+&lt;]--&gt;[&gt;]+&lt;[+&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;-&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;-[+]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;-&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;-&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;--&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;`.split`-`[c%13]).join``
 </code></pre>
 <p><a href="https://tio.run/##VU1Na8MwDL33VwjDwK5jsbLDSpt4MNh5hx49QYJrtylpHOx07N9nCW2z9ekgpPd1qr6rZGPd9aoNezf4YqgKXeG56rgttDFM3yHzG6TRknKT00wxMmut7XL5SiRLMyuNJpmPJylFt63n3@w2Y9odSmePMxOPqu3jzMSfRM35JaauqftSlcY@rV5I4CnUbVkOjesh2RAdFGAQ0WMfdn2s2wMXhNHtL9Zx3mVgBRQaOpDAmaEMpdrmmmHd7t3Pp@cTXYBawRusYQMrkcGz2C5saFNoHDbhwNlu6tkAGzOulRLYV8tG2WKqZlLlOkNDjNCH@FHZI09T6f@QNJmuGZ5PrveL9y6ij@HMkyAhxPAL" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, Score 678 (314 bytes)</h1>
-
-<pre class="lang-c prettyprint-override"><code>*a[]={&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;[&gt;]+&lt;[+&lt;]&quot;,0,&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;]&lt;[+&lt;]&quot;,0,&quot;&gt;[&gt;]+&lt;[+&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,0,&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&quot;};f(*s){for(;*s;)printf(a[*s++%13]);}
-</code></pre>
-<p><a href="https://tio.run/##7VLLboMwELzzFStXkYwNEVEvUU3oD/QPXB94JkgUIuwoB8Svly7mEXKreu5ajOTdmWEMTv20iuvzMLBYqlNHoqV4OBeXEVehDNU6kutMRoqHuFXEC7xfadWGvqo3zmqRhgQZ3vPajn6V89lNPK/NaEPbnoP0oqBMu13RtFQwLdxrW9amoLFkmvPd4VW5oh9eyjqtblkOoTZZ2ewvkeMgDb7isqYudA5g6bRpc@oKu8EpA5NrIxWcoIMPwomH6FsMLUYWPYt7i9KisshHagD95If5gI6m6IqGo7MAho/hfAlgeZSZOcJY15vRlJC50zv9lHuOOuvSS9xCXFXNPc9sXCKVt@e@CCMiHozkVshjEKipdc7RGVuP806uKA82kUclgwS7yMXEiYAEE68BJw0/gTZtemnpHMNDpgvvcIA3OE52848hy1t22WeNX8huMUT/f7//fL@/06KKz3rw7z8" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
-<p>Port of @Arnauld's answer.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, score 292 (166 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a>)</h1>
 <pre><code>“&gt;-+.+[&gt;+]&lt;[&lt;]&gt;-[+.[&gt;]+&lt;[+&lt;]--&gt;-+.+[&gt;+]&lt;[&lt;]&gt;-]&lt;[+&lt;]--&gt;[&gt;]+&lt;[+&lt;]&gt;-[+].&lt;-&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,.-&gt;-+.+[&gt;+]&lt;[&lt;]&gt;-[+].&lt;-&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;.-.&lt;--&gt;-“„&gt;-¬9×:'.“&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;“:'-¡IT&gt;&gt;&gt;%èJ
