--- a/q/138108.html
+++ b/q/138108.html
@@ -26,18 +26,27 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>081</td><td>APL</td><td>240905T043509Z</td><td><a href="https://codegolf.stackexchange.com/questions/138108/will-i-make-it-out-in-time/275362#275362">Aaron</a></td></tr>
-<tr d-ix="1"><td>208</td><td>Python 2</td><td>170808T140616Z</td><td><a href="https://codegolf.stackexchange.com/questions/138108/will-i-make-it-out-in-time/138113#138113">TFeld</a></td></tr>
-<tr d-ix="2"><td>071</td><td>Octave</td><td>170809T150136Z</td><td><a href="https://codegolf.stackexchange.com/questions/138108/will-i-make-it-out-in-time/138247#138247">rahnema1</a></td></tr>
-<tr d-ix="3"><td>015</td><td>Snails</td><td>170808T140843Z</td><td><a href="https://codegolf.stackexchange.com/questions/138108/will-i-make-it-out-in-time/138114#138114">feersum</a></td></tr>
-<tr d-ix="4"><td>174</td><td>JavaScript</td><td>170809T023526Z</td><td><a href="https://codegolf.stackexchange.com/questions/138108/will-i-make-it-out-in-time/138167#138167">tsh</a></td></tr>
-<tr d-ix="5"><td>243</td><td>Retina</td><td>170808T215011Z</td><td><a href="https://codegolf.stackexchange.com/questions/138108/will-i-make-it-out-in-time/138146#138146">Neil</a></td></tr>
+<tr d-ix="0"><td>125</td><td>JavaScript Node.js</td><td>240905T074249Z</td><td><a href="https://codegolf.stackexchange.com/questions/138108/will-i-make-it-out-in-time/275368#275368">l4m2</a></td></tr>
+<tr d-ix="1"><td>081</td><td>APL</td><td>240905T043509Z</td><td><a href="https://codegolf.stackexchange.com/questions/138108/will-i-make-it-out-in-time/275362#275362">Aaron</a></td></tr>
+<tr d-ix="2"><td>208</td><td>Python 2</td><td>170808T140616Z</td><td><a href="https://codegolf.stackexchange.com/questions/138108/will-i-make-it-out-in-time/138113#138113">TFeld</a></td></tr>
+<tr d-ix="3"><td>071</td><td>Octave</td><td>170809T150136Z</td><td><a href="https://codegolf.stackexchange.com/questions/138108/will-i-make-it-out-in-time/138247#138247">rahnema1</a></td></tr>
+<tr d-ix="4"><td>015</td><td>Snails</td><td>170808T140843Z</td><td><a href="https://codegolf.stackexchange.com/questions/138108/will-i-make-it-out-in-time/138114#138114">feersum</a></td></tr>
+<tr d-ix="5"><td>174</td><td>JavaScript</td><td>170809T023526Z</td><td><a href="https://codegolf.stackexchange.com/questions/138108/will-i-make-it-out-in-time/138167#138167">tsh</a></td></tr>
+<tr d-ix="6"><td>243</td><td>Retina</td><td>170808T215011Z</td><td><a href="https://codegolf.stackexchange.com/questions/138108/will-i-make-it-out-in-time/138146#138146">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>APL, 81 chars</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 125 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>M=&gt;(g=$=&gt;M.map((X,i)=&gt;X.map((c,j)=&gt;c--?$?c&amp;&amp;(h=(a,b,k)=&gt;k&amp;&amp;h(b,-a,k&gt;&gt;1,g|=a&gt;b|a&gt;-b?0:k))(i-$,j-y,8):c||g([i],y=j):0)))()|g&gt;14
+</code></pre>
+<p><a href="https://tio.run/##lY/PDoIwDMbvPAchbdIRIB4MZuMJuJsQDmPC5I9ixJiY7N1xKFxUDqaH9vu1ab828i4Hda0vN3buD@VY8THlAjR3uUj9k7wA7KlGLvZvoaixQjGWuInyPDhykFRQa2HreUcoiElqhQhJGy5FYaRgRRLELSLUzKWGPWiLsTJGQ1bn9OANxgHaLhotws24U/156LvS73oNFWROFtAUEc05JydbxBwTCn6haG0q/ETRH7tslTs5ovPtNVxrRIv11@3lh4nY@fEJ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Four sector check. <code>g</code> reused to store 4 flags.</p>
+<p><code>$</code> is used because it was <code>g&lt;&quot;15&quot;</code> so a function is smaller than the number</p>
+</div>
+<div id="pu1" class="pu"><h1>APL, 81 chars</h1>
 <pre><code>{e←↓⍉2 4⍴2⌽(⌽,⍉↑s s←⊃s f←⍸¨'OF'=⊂⍵),1,(⌽⍴⍵),1⋄0=∧/+⌿↑(f{+/¨|⍵-⊂⍺}¨⊂e)≤⊂+/¨|e-⊂s}
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>283</s> <s>218</s> <s>209</s> 208 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>283</s> <s>218</s> <s>209</s> 208 bytes</h1>
 
 
 
@@ -77,7 +86,7 @@ FFFFF               F             F
 
 <p>Saved a lot of bytes thanks to <a href="https://codegolf.stackexchange.com/users/59487/mr-xcoder">Mr. Xcoder</a> and <a href="https://codegolf.stackexchange.com/users/66418/felipe-nardi-batista">Felipe Nardi Batista</a></p>
 </div>
-<div id="pu2" class="pu"><h1>Octave, 71 bytes</h1>
+<div id="pu3" class="pu"><h1>Octave, 71 bytes</h1>
 
 <pre class="lang-matlab prettyprint-override"><code>@(a)(A=blkdiag(0,a,0))&lt;3||any((bwdist(A&gt;2,'ci')&gt;bwdist(A==2,'ci'))(!A))
 </code></pre>
@@ -104,14 +113,14 @@ any(...)(!A)        % check if there is at least one element on the boundary of
                     % that of distance map of your location
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>Snails, 15 bytes</h1>
+<div id="pu4" class="pu"><h1>Snails, 15 bytes</h1>
 <pre><code>\Oo!{.,fee7.,\F
 </code></pre>
 <p><a href="https://tio.run/##K85LzMwp/v8/xr9SsVpPJy011VxPJ8bt/389Nz0g4NLTQ6Fggv4QnhuKIIgLAA" rel="noreferrer" title="Snails – Try It Online">Try it online!</a></p>
 <p><code>1</code> means survival while <code>0</code> means death.</p>
 <p>Since it is impossible to outrun the fire, it is never useful to try to go around it. The best route is always a straight line. So there are only four possible choices of escape route. To determine if a direction is safe, we check for any <code>F</code> in the &quot;fire cone&quot; pointing in that direction.</p>
 </div>
-<div id="pu4" class="pu"><h1>JavaScript, 174 bytes</h1>
+<div id="pu5" class="pu"><h1>JavaScript, 174 bytes</h1>
 
 <pre><code>a=&gt;+(t=&gt;g=a=&gt;t--?g(a.map((l,y)=&gt;l.map((c,x)=&gt;(h=v=&gt;[(a[y-1]||[])[x],(a[y+1]||[])[x],a[y][x+1],a[y][x-1],c].includes(v),!c&amp;&amp;h()?p=1:[2,0,1].find(h))))):p)((p=a+'!').length)(a)
 </code></pre>
@@ -234,7 +243,7 @@ h=v=&gt;[(a[y-1]||[])[x],(a[y+1]||[])[x],a[y][x+1],a[y][x-1],c].includes(v)
 :[2,0,1].find(h)
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/m-ender/retina" rel="nofollow noreferrer">Retina</a>, 243 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/m-ender/retina" rel="nofollow noreferrer">Retina</a>, 243 bytes</h1>
 
 <pre><code>^.*O(.|¶)*|(.|¶)*O.*$|(.|¶)*(¶O|O¶)(.|¶)*
 O
