--- a/q/275350.html
+++ b/q/275350.html
@@ -26,13 +26,61 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>076</td><td>JavaScript ES11</td><td>240904T171431Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275355#275355">Arnauld</a></td></tr>
-<tr d-ix="1"><td>015</td><td>05AB1E</td><td>240905T070144Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275367#275367">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>012</td><td>05AB1E</td><td>240905T070144Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275367#275367">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>076</td><td>JavaScript ES11</td><td>240904T171431Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275355#275355">Arnauld</a></td></tr>
 <tr d-ix="2"><td>027</td><td>Charcoal</td><td>240904T185258Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275356#275356">Neil</a></td></tr>
 <tr d-ix="3"><td>014</td><td>Jelly</td><td>240904T150642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275352#275352">Jonathan</a></td></tr>
 <tr d-ix="4"><td>015</td><td>Stax</td><td>240904T162249Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275353#275353">Khuldrae</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES11), 76 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>15</s> 12 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>$FD&gt;*Df¯Kß=ˆ
+</code></pre>
+<p>Given <span class="math-container">\$n\$</span>, it'll output the first <span class="math-container">\$n\$</span> values on separated lines.</p>
+<p><a href="https://tio.run/##yy9OTMpM/f9fxc3FTssl7dB678PzbU@3/f9vCgA" rel="nofollow noreferrer">Try it online.</a></p>
+<p><strong>Original 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a> answer:</strong></p>
+<pre><code>λD&gt;*}fÅ»sDŠKß=ª
+</code></pre>
+<p>Outputs the infinite sequence, each value on a separated line.</p>
+<p><a href="https://tio.run/##AR8A4P9vc2FiaWX//867RD4qfWbDhcK7c0TFoEvDnz3Cqv//" rel="nofollow noreferrer">Try it online.</a></p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>$         # Push 1 and the input-integer
+ F        # Pop and loop the input amount of times:
+  D       #  Duplicate the current n
+   &gt;      #  Increase the copy by 1
+    *     #  Multiply the two together: n*(n+1)
+     D    #  Duplicate it for the next iteration
+  f       #  Pop the copy, and push a list of its prime factors
+   ¯      #  Push the global array of all previous terms
+    K     #  Remove those values from the prime factors
+     ß    #  Pop and leave the minimum
+      =   #  Output it with trailing newline (without popping)
+       ˆ  #  Pop and add it to the global array
+</code></pre>
+
+<pre class="lang-python prettyprint-override"><code>λD&gt;*}     # Generate the infinite Sylvester's sequence:
+λ         #  Start the recursive environment
+          #  to result in an infinite sequence
+          #  Starting implicitly with a(0)=1
+          #  And where every following a(n) is calculated by:
+          #   (implicitly push the previous a(n-1))
+ D        #   Duplicate it
+  &gt;       #   Increase the copy by 1
+   *      #   Multiply the two together: a(n-1)*(a(n-1)+1)
+    }     #  Close the recursive environment
+f         # Map each inner value to a list of it unique prime factors
+Å»        # Cumulative left-reduce this list by:
+  s       #  Swap so the current list is at the top of the stack
+   D      #  Duplicate it
+    Š     #  Triple-swap it
+          #  (the stack is now: list,primeFactors,list)
+     K    #  Remove all values we've already output from the prime-factors list
+      ß   #  Pop and leave the minimum remaining prime-factor
+       =  #  Output it with trailing newline (without popping)
+        ª #  Add it to the list for the next iteration
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES11), 76 bytes</h1>
 <p><sup>I'm not convinced this is as terse as possible.</sup></p>
 <p>Expects a Bigint <span class="math-container">\$n\$</span> and returns <span class="math-container">\$a(n)\$</span> as another Bigint. This assumes that Sylvester's sequence is squarefree, which is an unresolved problem (<a href="https://tio.run/##FYxBCoMwFET3niILC/k1aalL7deDiKBYbdqEn6ISFNGrp3E1b4aZ@baunbrx85sl2Vfv/YCcxIIpCYUai/WiS8XloSFT1XpHLXQdgmC1cKh46K24AGAhJZXDub3KYxGqcjUqyJwf7MhNPzNiyB6UB30GSE9KEmBbxFhnabKmvxn75k3L4412CO14C3@wN5BHu/8D" rel="nofollow noreferrer">+4 bytes</a> for a safe version without this assumption).</p>
 <p>Computes <span class="math-container">\$a(1)\$</span> to <span class="math-container">\$a(12)\$</span> almost instantly.</p>
@@ -74,41 +122,6 @@
 <pre class="lang-javascript prettyprint-override"><code>f=(n,x=2n,h=y=&gt;{for(v=1n;y%++v||h[y/=v,v];);})=&gt;h(x)||--n?f(n,x*-~x,h[v]=h):v
 </code></pre>
 <p><a href="https://tio.run/##FYzLDoMgFAX3fgULm3AL9OGy9NoPMSYaq6WNgUYN0QD9dYqrM4sz82ltO3fT@7sIbZ59jANSzVcsNFe4YekGM1GLVy23A2PWe1VtZ7Tc1hJkACwVXcF7IfRj2MWj@K1cVbZGBTcbd3vsF6IJktRIeyfFZQfGgLiMkM7o2Yz9aTQv2rQ0dzpAOucu5SA0ILMQ/w" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>λD&gt;*}fÅ»sDŠKß=ª
-</code></pre>
-<p>Outputs the infinite sequence, each value on a separated line.</p>
-<p><a href="https://tio.run/##AR8A4P9vc2FiaWX//867RD4qfWbDhcK7c0TFoEvDnz3Cqv//" rel="nofollow noreferrer">Try it online.</a></p>
-<p><strong>Explanation:</strong></p>
-
-<p>Step 1: Generate the infinite Sylvester's sequence:</p>
-<pre class="lang-python prettyprint-override"><code>λ         # Start the recursive environment
-          # to result in an infinite sequence
-          # Starting implicitly with a(0)=1
-          # And where every following a(n) is calculated by:
-          #  (implicitly push the previous a(n-1))
- D        #  Duplicate it
-  &gt;       #  Increase the copy by 1
-   *      #  Multiply the two together: a(n-1)*(a(n-1)+1)
-}         # Close the recursive environment
-</code></pre>
-<p><a href="https://tio.run/##yy9OTMpM/f//3G4XO63a//8B" rel="nofollow noreferrer">Try just step 1 online.</a></p>
-<p>Step 2: Get all (unique) prime factors of each value in this sequence:</p>
-<pre class="lang-python prettyprint-override"><code>f         # Map each inner value to a list of it unique prime factors
-</code></pre>
-<p><a href="https://tio.run/##yy9OTMpM/f//3G4XO63a//8B" rel="nofollow noreferrer">Try just the first 2 steps online.</a></p>
-<p>Step 3: Use a reduce-by to fill the Sylvester Primes' sequence one value at a time, outputting each on a separated newline:</p>
-<pre class="lang-python prettyprint-override"><code>Å»        # Cumulative left-reduce this list by:
-  s       #  Swap so the current list is at the top of the stack
-   D      #  Duplicate it
-    Š     #  Triple-swap it
-          #  (the stack is now: list,primeFactors,list)
-     K    #  Remove all values we've already output from the prime-factors list
-      ß   #  Pop and leave the minimum remaining prime-factor
-       =  #  Output it with trailing newline (without popping)
-        ª #  Add it to the list for the next iteration
-</code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 27 bytes</h1>
 <pre><code>≔¹ηＦＮ«≧×⊕ηη⊞υ²Ｗ﹪ηΠυ⊞υ⊕⊟υ»Ｉυ
